Add minor updates and div for pomodoro images

--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
     <section>
         <div class="row" id="pom-settings">
             <div class="col-sm-4 col-xs-12 text-center">
-                <h4 class="questions">How many Poms?</h4>
+                <h4 class="questions">How many<br/>Poms?</h4>
                 <button class="btn btn-default" id="pom-minus">-</button>
                 <span id="pom-num">3</span>
                 <button class="btn btn-default" id="pom-plus">+</button>
             </div>
             <div class="col-sm-4 col-xs-12 text-center">
-                <h4 class="questions">How many Minutes?</h4>
+                <h4 class="questions">How many<br/>Minutes?</h4>
                 <button class="btn btn-default" id="work-minus">-</button>
-                <span id="work-num">3</span>
+                <span id="work-num">25</span>
                 <button class="btn btn-default" id="work-plus">+</button>
             </div>
             <div class="col-sm-4 col-xs-12 text-center">
-                <h4 class="questions">How much Break?</h4>
+                <h4 class="questions">How long a<br/>Break?</h4>
                 <button class="btn btn-default" id="break-minus">-</button>
-                <span id="break-num">3</span>
+                <span id="break-num">5</span>
                 <button class="btn btn-default" id="break-plus">+</button>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-md-12 text-center" id="pom-holder">
             </div>
         </div>
     </section>
