--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <h3 id="timer">25:00</h3>
         </div>
         <div class="col-xs-6 text-center">
-            <button type="button" class="btn btn-default btn-lg" aria-label="Start">
+            <button type="button" class="btn btn-default btn-lg" aria-label="Start" id="start">
           <span class="glyphicon glyphicon-play" aria-hidden="true">
           </span>
             </button>
-            <button type="button" class="btn btn-default btn-lg" aria-label="Pause">
+            <button type="button" class="btn btn-default btn-lg" aria-label="Pause" id="pause">
           <span class="glyphicon glyphicon-pause" aria-hidden="true">
           </span>
             </button>
-            <button type="button" class="btn btn-default btn-lg" aria-label="Restart">
+            <button type="button" class="btn btn-default btn-lg" aria-label="Restart" id="restart">
           <span class="glyphicon glyphicon-refresh" aria-hidden="true">
           </span>
             </button>
