--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="col-xs-12 text-center">
             <h3 id="timer">25:00</h3>
         </div>
-        <div class="col-xs-6 text-center">
+        <div class="col-xs-6 text-center controls">
             <button type="button" class="btn btn-default btn-lg" aria-label="Start" id="start">
           <span class="glyphicon glyphicon-play" aria-hidden="true">
           </span>
